# bobTheBuildersMolecularDiscombobulator

./: CMakeLists.txt  README.md  alinin.pqr  config.h  csvparser.cu  csvparser.h  csvwriter.cu  csvwriter.h  d_main.cu  d_main.h  h2o.pqr  h2o2.xyz  h_main.cu  h_main.h  main.cu  main.h  make  makefile  molecule.h  short_stripped_alinin.pqr  stripped_alinin.pqr
.github/workflows/: c-cpp.yml
